View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0031131 | Community | OCCT:Mesh | public | 2019-11-05 11:43 | 2020-12-02 17:12 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.4.0 | ||||
Target Version | 7.5.0 | Fixed in Version | 7.5.0 | ||
Summary | 0031131: [REGRESSION] Mesh - location of Wire affects Poly_Polygon3D | ||||
Description | The following scripts creates a compound of unlocated Wire and translated Wire. Poly_Polygon3D generated by TKMesh are unexpectedly misplaced. This is a regression compared to OCCT 7.3.0. Reference: https://www.opencascade.com/content/confusing-occt-74-mesh-results-compound | ||||
Steps To Reproduce | pload MODELING VISUALIZATION vertex v1 0 0 0 vertex v2 10 0 0 vertex v3 10 10 0 edge e12 v1 v2 edge e23 v2 v3 wire w e12 e23 tcopy w w0 copy w w11 copy w w12 copy w w13 ttranslate w12 0 0 10 ttranslate w13 0 0 20 compound w11 w12 w13 c incmesh c 1 vclear vinit View1 vdefaults -autoTriang 0 explode w11 v #vdisplay w11 w0 w11_1 w11_2 w11_3 vdisplay w11 w11_1 w11_2 w11_3 vfit bounding w11 -save xmin ymin zmin xmax ymax zmax checkpoint Min [list [dval xmin] [dval ymin] [dval zmin]] { -1 -1 -1 } 0.0001 checkpoint Max [list [dval xmax] [dval ymax] [dval zmax]] { 11 11 1 } 0.0001 Result: wire presentation doesn't match its vertices. It seems that -extToler and -noTriangulation parameters of "bounding" command have no effect for computed box (in case of Wire), while should be. | ||||
Tags | No tags attached. | ||||
Test case number | bugs/mesh/bug31131 | ||||
|
wire_730_OK.png (1,317 bytes) |
|
wire_740_KO.png (1,041 bytes) |
|
Branch CR31131 has been created by oan. SHA-1: 084f7642d9f14abf095be5129c21fa66457bb901 Detailed log of new commits: Author: oan Date: Tue Nov 5 16:13:38 2019 +0300 0031131: [REGRESSION] Mesh - location of Wire affects Poly_Polygon3D Use TopoDS_Edge without location in case of free edges to produce Poly_Polygon3D without offset. |
|
Branch CR31131 has been updated forcibly by oan. SHA-1: 038e2e7922c9884ebda8be9973e6040c0273234e |
|
Please review the patch. http://jenkins-test-12.nnov.opencascade.com/view/CR31131-master-OAN/view/COMPARE/ |
|
Reviewed. |
|
Please explain differences in images in products tests "dxf read *". |
|
Before #0031077 most DXF tests have no screenshot dumps in 3D Viewer, so that regression was unnoticed. I have not analyzed DXF models, but to me all changes look like exactly fixing the bug. |
|
I suspected that it is improvement. Just wanted some confirmation of this. |
|
Tested in framework of WEEK-45 Combination - OCCT branch : WEEK-45 master SHA - a1a9b249523438cf9b3d510fb4ff74bd4a5675b6 5f5b1aed1c6e139bbd34314eca77ae7abcd8895c Products branch : WEEK-45 SHA - f88bc93e3637c4c42f3c154c0b0e167d4e297ae6 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16844.70000000007 / 16848.430000000117 [-0.02%] Products Total CPU difference: 10837.970000000065 / 10873.690000000062 [-0.33%] Windows-64-VC14: OCCT Total CPU difference: 18366.671875 / 18319.515625 [+0.26%] Products Total CPU difference: 12848.578125 / 12848.859375 [-0.00%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR31131 has been deleted by inv. SHA-1: 038e2e7922c9884ebda8be9973e6040c0273234e |
occt: master e9d05765 2019-11-05 13:13:38 Committer: bugmaster Details Diff |
0031131: [REGRESSION] Mesh - location of Wire affects Poly_Polygon3D Use TopoDS_Edge without location in case of free edges to produce Poly_Polygon3D without offset. |
Affected Issues 0031131 |
|
mod - src/IMeshTools/IMeshTools_ShapeExplorer.cxx | Diff File | ||
add - tests/bugs/mesh/bug31131 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-11-05 11:43 | kgv | New Issue | |
2019-11-05 11:43 | kgv | Assigned To | => oan |
2019-11-05 11:44 | kgv | Description Updated | |
2019-11-05 11:45 | kgv | File Added: wire_730_OK.png | |
2019-11-05 11:45 | kgv | File Added: wire_740_KO.png | |
2019-11-05 14:34 | kgv | Steps to Reproduce Updated | |
2019-11-05 16:18 | git | Note Added: 0088732 | |
2019-11-05 16:21 | git | Note Added: 0088733 | |
2019-11-05 18:24 | oan | Note Added: 0088736 | |
2019-11-05 18:24 | oan | Assigned To | oan => msv |
2019-11-05 18:24 | oan | Status | new => resolved |
2019-11-06 09:48 | msv | Note Added: 0088742 | |
2019-11-06 09:48 | msv | Assigned To | msv => bugmaster |
2019-11-06 09:48 | msv | Status | resolved => reviewed |
2019-11-06 09:55 | msv | Assigned To | bugmaster => oan |
2019-11-06 09:55 | msv | Status | reviewed => assigned |
2019-11-06 09:55 | msv | Note Added: 0088743 | |
2019-11-06 10:44 | kgv | Note Added: 0088744 | |
2019-11-06 10:45 | kgv | Note Edited: 0088744 | |
2019-11-06 10:45 | kgv | Note Edited: 0088744 | |
2019-11-06 10:51 | oan | Assigned To | oan => msv |
2019-11-06 10:51 | oan | Status | assigned => resolved |
2019-11-06 10:59 | msv | Note Added: 0088746 | |
2019-11-06 10:59 | msv | Assigned To | msv => bugmaster |
2019-11-06 10:59 | msv | Status | resolved => reviewed |
2019-11-07 10:46 | bugmaster | Note Added: 0088767 | |
2019-11-07 10:46 | bugmaster | Status | reviewed => tested |
2019-11-07 10:47 | bugmaster | Test case number | => bugs/mesh/bug31131 |
2019-11-10 11:18 | bugmaster | Changeset attached | => occt master e9d05765 |
2019-11-10 11:18 | bugmaster | Status | tested => verified |
2019-11-10 11:18 | bugmaster | Resolution | open => fixed |
2019-11-10 11:41 | git | Note Added: 0088836 | |
2020-12-02 16:40 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:12 | emo | Status | verified => closed |