0031131: [REGRESSION] Mesh - location of Wire affects Poly_Polygon3D

Use TopoDS_Edge without location in case of free edges to produce Poly_Polygon3D without offset.